[package]
name = "uclicious-libucl-sys"
version = "0.8.1"
description = "Low-level bindings to libucl."
authors = ["Łukasz Niemier <lukasz@niemier.pl>", "Igor Laćarac <draftsix@gmail.com>", "Andrey Cherkashin <andoriyu@gmail.com>"]
build = "build.rs"
license-file = "LICENSE"
repository = "https://github.com/andoriyu/uclicious-libucl-sys"
exclude = [
  "libucl/lua/libucl.rockspec"
]

[dependencies]
libc = "0.2.66"
bitflags = "1.2"

[build-dependencies]
cmake = "0.1.42"
pkg-config = "0.3.17"
